--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="title">
             핫한 성수동 <br>
-            Ascendit 팝업 스토어에 다녀왔어요!!!
+            Ascendit 팝업 스토어에 다녀왔어요!
         </div>
         <div id="paragraph1">
             성수동 한복판이 파티의 중심이 된다?
